Now executes the remote commands correctly.